# road_generator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy-pages.yml  static.yml
shaders/: cube.hlsl  ribbon.hlsl
src/: HalfEdgeMesh.cpp  HalfEdgeMesh.h  PolylineCurve.cpp  PolylineCurve.h  RibbonMesh.cpp  RibbonMesh.h  RoadGeneration.cpp  RoadGeneration.h  main.cpp
src/core/: MathTypes.h  PolylineCurve.cpp  PolylineCurve.h  RibbonMesh.cpp  RibbonMesh.h  RoadDemo.cpp  RoadDemo.h  RoadGeneration.cpp  RoadGeneration.h
src/native_dx12/: main.cpp
tests/core/: CoreTests.cpp
web/: index.html
web/shaders/: lines.wgsl  ribbon.wgsl
web/src/: main.js  math.js  road_demo_wasm.cpp  shaders.js  site.css
